fix popup intercepting taps on adjacent elements on mobile

--- a/src/app/ui/popup/popup.module.css
+++ b/src/app/ui/popup/popup.module.css
@@ -6,6 +6,7 @@
   background-color: whitesmoke;
   position: absolute;
   opacity: 0;
+  pointer-events: none;
   transition: opacity 0.3s ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 7px;
   border-radius: 5px;
@@ -21,6 +22,7 @@
 
 .container:hover .popup {
   opacity: 1;
+  pointer-events: auto;
 }
 
 @media (max-width: 300px) {
